@@ -1,6 +1,7 @@
 require 'pry'
 require 'logger'
 require 'pry-remote-em'
+require 'pry-remote-em/broker'
 require 'pry-remote-em/server/shell_cmd'
 
 # How it works with Pry
@@ -32,6 +33,34 @@ require 'pry-remote-em/server/shell_cmd'
 # Reference:
 # http://www.igvita.com/2010/03/22/untangling-evented-code-with-ruby-fibers/
 module PryRemoteEm
+  class << self
+    # Local PryRemoteEm EM signatures and server name indexed by url. Each
+    # signature can be used with high level EM methods like EM.stop_server or
+    # EM.get_sockname. If a server has been stopped EM.get_sockname will return
+    # nil for that server's signature.
+    def servers
+      @servers ||= {}
+    end
+
+    # Safely stop one or more PryRemoteEm servers and remove them from the list
+    # of servers.
+    # @param [String] id url or name
+    def stop_server(id)
+      if servers[id]
+        EM.stop_server(servers[id][0]) if EM.get_sockname(servers[id][0])
+        Broker.unregister(id)
+        servers.delete(id)
+        return Array(id)
+      end
+      servers.select{ |i, (sig, name)| name == id }.map do |i, (sig, name)|
+        EM.stop_server(sig) if EM.get_sockname(sig)
+        Broker.unregister(i)
+        servers.delete(i)
+        i
+      end
+    end # stop_server(id)
+  end
+
   module Server
     include Proto
 
@@ -46,11 +75,12 @@ module PryRemoteEm
       # @option opts [Proc, Object] :auth require user authentication - see README
       # @option opts [Boolean] :allow_shell_cmds
       def run(obj, host = DEFHOST, port = DEFPORT, opts = {:tls => false})
-        tries = :auto == port ? 100.tap{ port = DEFPORT } : 1
+        tries = [port, opts[:port_fail]].include?(:auto) ? 100 : 1
+        port  = DEFPORT if :auto == port
         # TODO raise a useful exception not RuntimeError
         raise "root permission required for port below 1024 (#{port})" if port < 1024 && Process.euid != 0
         begin
-          EM.start_server(host, port, PryRemoteEm::Server, obj, opts) do |pre|
+          server = EM.start_server(host, port, PryRemoteEm::Server, obj, opts) do |pre|
             Fiber.new {
               begin
                 yield pre if block_given?
@@ -62,17 +92,24 @@ module PryRemoteEm
           end
         rescue => e
           # EM 1.0.0.beta4's message tells us the port is in use; 0.12.10 just says, 'no acceptor'
-          if (e.message.include?('port is in use') || e.message.include?('no acceptor')) && tries >= 1
+          if (e.message.include?('port is in use') || e.message.include?('no acceptor')) && tries > 1
             tries -= 1
             port += 1
             retry
           end
-          raise e
+          raise "can't bind to #{host}:#{port} - #{e}"
         end
-        scheme = opts[:tls] ? 'pryems' : 'pryem'
-        (opts[:logger] || ::Logger.new(STDERR)).info("[pry-remote-em] listening for connections on #{scheme}://#{host}:#{port}/")
-        "#{scheme}://#{host}:#{port}/"
-      end # run(obj, host = DEFHOST, port = DEFPORT)
+        url    = "#{opts[:tls] ? 'pryems' : 'pryem'}://#{host}:#{port}/"
+        name   = Pry.view_clip(obj.send(:eval, 'self'))
+        PryRemoteEm.servers[url] = [server, name]
+        (opts[:logger] || ::Logger.new(STDERR)).info("[pry-remote-em] listening for connections on #{url}")
+        Broker.run(opts[:broker_host] || DEF_BROKERHOST, opts[:broker_port] || DEF_BROKERPORT, opts)
+        Broker.register(url, name)
+        rereg = EM::PeriodicTimer.new(15) do
+          EM.get_sockname(server) ? Broker.register(url, name) : nil #rereg.cancel
+        end
+        url
+      end
 
       # The list of pry-remote-em connections for a given object, or the list of all pry-remote-em
       # connections for this process.
@@ -95,6 +132,7 @@ module PryRemoteEm
 
     def initialize(obj, opts = {:tls => false})
       @obj              = obj
+      @prompt           = Pry.view_clip(obj.send(:eval, 'self'))
       @opts             = opts
       @allow_shell_cmds = opts[:allow_shell_cmds]
       @log              = opts[:logger] || ::Logger.new(STDERR)
@@ -128,12 +166,18 @@ module PryRemoteEm
       end
     end
 
+    def url
+      port, host = Socket.unpack_sockaddr_in(get_sockname)
+      "#{@opts[:tls] ? 'pryems' : 'pryem'}://#{host}:#{port}/"
+    end
+
     def post_init
       @lines = []
       Pry.config.pager, @old_pager = false, Pry.config.pager
       @auth_required  = @auth
       port, ip        = Socket.unpack_sockaddr_in(get_peername)
       @log.info("[pry-remote-em] received client connection from #{ip}:#{port}")
+      # TODO include first level prompt in banner
       send_banner("PryRemoteEm #{VERSION} #{@opts[:tls] ? 'pryems' : 'pryem'}")
       @opts[:tls] ? start_tls : (@auth_required && send_auth(false))
       PryRemoteEm::Server.register(@obj, self)
