@@ -19,7 +19,7 @@ end
 
 class Foo
   def initialize(auth)
-    binding.remote_pry_em('127.0.0.1', 1337, auth: auth)
+    binding.remote_pry_em('127.0.0.1', 1337, auth: auth, :port_fail => :auto)
   end
 end
 
@@ -50,8 +50,8 @@ end
 
 
 EM.run{
-  Foo.new(auth_hash)
   anon_obj.new.remote_pry_em('localhost', :auto, :tls => true, :target => binding)
+  Foo.new(auth_hash)
   anon_obj.new.remote_pry_em('localhost', :auto, :tls => true, :allow_shell_cmds => true)
   anon_obj.new.remote_pry_em('0.0.0.0', :auto, :tls => true)
   anon_obj.new.remote_pry_em('localhost', :auto, :tls => true, :allow_shell_cmds => true, :auth => auth_hash) do |pry|
