@@ -1,5 +1,8 @@
 0.7.0
-- Server.run returns a url (String) with the scheme, host and port of the listening server
+- adds PryRemoteEm.servers and PryRemoteEm.stop_server
+- all servers will attempt to register with a broker; client will retrieve list of servers from the broker and present a menu to the user by default
+- when specifying a specific port to listen on the option :port_fail can be set to :auto; if binding fails attempt to bind on the next port 
+- server.run returns a url (String) with the scheme, host and port of the listening server
 - json specific parts of wire protocol are abstracted away from client and server
 - json proto is a bit more robust: delimeter can be a part of data and CRC is performed
 
